<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ik_solver_lib</name>
  <version>0.0.1</version>
  <description>IK Solver Plugin Library</description>
  <author email="lethiic@gmail.com">lethic</author>
  <author email="josh@electrifiedautonomy.com">Josh Whitley</author>
  <maintainer email="lethiic@gmail.com">lethic</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>orocos_kdl_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ik_solver_lib plugin="${prefix}/plugins.xml" />
  </export>
</package>

